--- a/style.css
+++ b/style.css
@@ -104,4 +104,11 @@ button {
   font-size: 36px;
   font-style: italic;
   color: #1f2937;
+  padding: 15vh 16vw;
+}
+
+.random-quote cite {
+  display: block;
+  text-align: end;
+  font-weight: 900;
 }
