--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@
 }
 
 .hero,
-header {
+header,
+footer {
   background-color: #1f2937;
   padding: 20px 11vw;
 }
 
 header {
   display: flex;
-  color: #e5e7eb;
+  color: #f9faf8;
 }
 
 .header-logo {
@@ -29,7 +30,7 @@ header nav ul {
 }
 
 a {
-  color: #e5e7eb;
+  color: #f9faf8;
 }
 
 .hero {
@@ -69,6 +70,7 @@ button {
   color: #e5e7eb;
   padding: 5px 20px;
   max-width: 100px;
+  border-style: solid;
   border-radius: 6px;
 }
 
@@ -111,4 +113,23 @@ button {
   display: block;
   text-align: end;
   font-weight: 900;
+}
+
+.call-to-action {
+  margin: 15vh 12vw;
+  border-radius: 6px;
+  padding: 6vh 6vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #f9faf8;
+}
+
+.call-to-action button {
+  border-color: #f9faf8;
+}
+
+footer {
+  text-align: center;
+  color: #e5e7eb;
 }
